# cybercypher5.0

./: .gitignore  AGENT_CONCEPTS.md  MOCK_TICKETS.md  README.md  main.py  pyproject.toml
backend/: agent.py  main.py  mock_db.py  requirements.txt  router.py  tp.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.js  page.js
frontend/components/: AgentInsightPanel.tsx
