[project]
name = "cyphercypher5-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.7",
    "langchain-core>=1.2.7",
    "langchain-google>=0.1.1",
    "langchain-google-genai>=4.2.0",
    "langgraph>=1.0.7",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "supabase>=2.27.2",
    "uvicorn>=0.40.0",
]
